TODO
====

internal-fluid-flow 0.2.3-alpha (2022-10-24)
======================================
* Minor changes on documentation
* Help comments included for internal functions

internal-fluid-flow 0.2.2 (2022-10-21)
======================================
* .m files eol CRLF to LF
* Minor changes on functions
* Minor changes on documentation

internal-fluid-flow 0.2.1 (2022-10-08)
======================================
* Minor adjustments on plots
* Major adjustments on head comments
* Major changes in f2Re and Re2f

internal-fluid-flow 0.2.0 (2022-09-23)
======================================
* Input sequence altered for most functions
  (please, check it out at Julia's help)
* Input types declared as Number
* Default values for density and viscosity
  set to rho = 0.997 g/cc and
  mu = 0.91 g/cm/s (water @ 25 °C)
* Default value for gravitational acceleration
  set to g = 981 cm/s/s
* Major changes on docstrings and on README.md

internal-fluid-flow 0.1.2 (2022-09-03)
======================================
* Minor adjustments on plots
* Minor adjustments on head comments

internal-fluid-flow 0.1.1 (2022-08-27)
======================================
* Minor adjustments on plots

internal-fluid-flow 0.1.0 (2022-08-20)
======================================
* Spell fixed for "Colebrook"
* Adoption of [semantic versioning](https://semver.org)
* Laminar/turbulent transition reset from 3e3 to 2.3e3
* Axes' titles adapted to fit to functions' inputs
* Minor corrections on help comments
* Major changes on code to solve bug on the transitional region

internal-fluid-flow 0.0.3 (2022-07-23)
======================================
* Spell correction: "Weissbach" replaced by by "Weisbach"
  in DESCRIPTION and README.md
* Line 22 of f2Re: default set to eps=2e-3e
* Line 58 of f2Re: second condition removed
* Line 45 of Re2f: "Re<2500" replaced by "Re<3e3"

internal-fluid-flow 0.0.2 (2022-07-14)
======================================