@@ -5,6 +5,7 @@ internal-fluid-flow 0.2.3-alpha (2022-10-24)
 ======================================
 * Minor changes on documentation
 * Help comments included for internal functions
+* Internal function bissecao renamed to bissection
 
 internal-fluid-flow 0.2.2 (2022-10-21)
 ======================================
